cmake_minimum_required(VERSION 2.9)

add_definitions(-mtune=native)
add_definitions(-Wall)
add_definitions(-O3)

add_definitions(-std=c++14)
add_executable(fun-dot         examples/fun-dot.cc)
add_executable(fun-norm        examples/fun-norm.cc)
add_executable(fun-primes      examples/fun-primes.cc)
add_executable(fun-random      examples/fun-random.cc)
add_executable(fun-nspheres    examples/fun-nspheres.cc)
add_executable(fun-polymorphic examples/fun-polymorphic.cc)
add_executable(fun-ivp         examples/fun-ivp.cc)

add_executable(fun-time-map         examples/time/map.cc)
add_executable(fun-time-polymorphic examples/time/polymorphic.cc)
add_executable(fun-time-take        examples/time/take.cc)

add_executable(fun-map         examples/doc/fun-map.cc)
add_executable(fun-filter      examples/doc/fun-filter.cc)
add_executable(fun-sections    examples/doc/fun-sections.cc)
add_executable(fun-composition examples/doc/fun-composition.cc)
add_executable(fun-currying    examples/doc/fun-currying.cc)
add_executable(fun-flip        examples/doc/fun-flip.cc)
add_executable(fun-new-functions examples/doc/fun-new-functions.cc)
add_executable(fun-currying-2  examples/doc/fun-currying-2.cc)
add_executable(fun-uncurry     examples/doc/fun-uncurry.cc)
add_executable(fun-slicing     examples/doc/fun-slicing.cc)
